fix z-index for all page with hamburger menu

--- a/styles/Component/Hamburger.module.scss
+++ b/styles/Component/Hamburger.module.scss
@@ -15,7 +15,7 @@ $x-width: calc($hamburger-height * 1.41421356237);
 
 .navbar {
   // float: right;
-  
+ 
 
   .hamburgerMenu {
     display: flex;
@@ -25,7 +25,7 @@ $x-width: calc($hamburger-height * 1.41421356237);
     width: max-content;
 
     // position: relative;
-    position: absolute;
+    position: fixed;
     top: $hamburger-margin;
     right: 2rem;
     z-index: 99999999999999;
@@ -72,7 +72,7 @@ $x-width: calc($hamburger-height * 1.41421356237);
       width: 0;
     }
 
-    &:has(.input::checked){
+    &:has(.input::checked) {
       $foreground: white;
       $background: #333;
     }
@@ -80,24 +80,21 @@ $x-width: calc($hamburger-height * 1.41421356237);
     &:has(.input:focus-visible)::before,
     &:has(.input:focus-visible)::after,
     & .input:focus-visible {
-      
-      border: .1rem solid $background;
-      box-shadow: 0 0 0 .1rem $foreground;
+      border: 0.1rem solid $background;
+      box-shadow: 0 0 0 0.1rem $foreground;
     }
-
-
   }
 
-  .sidebar{
+  .sidebar {
     transition: translate $animation-timing;
     translate: -200%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
 
     padding: 1rem 2rem;
     padding-top: calc($hamburger-height + $hamburger-margin + 1rem);
-    background-color: #0C2240;
+    background-color: #0c2240;
     color: $background;
     width: 55vw;
     min-height: 100vh;
@@ -105,51 +102,46 @@ $x-width: calc($hamburger-height * 1.41421356237);
     .nav {
       padding: 20% 0;
       display: flex;
-  flex-direction: column;
-  align-items: center;
- gap: 2rem;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
       .link {
         // display:none;
         padding: 0em 1em;
         text-decoration: none;
-  
+
         color: $color-neutral;
         font-weight: light;
         // border: 1px solid lightgreen;
-  
+
         &:hover {
           color: $color-secondary-light;
         }
       }
-  
+
       .span {
         margin-right: 0.5rem;
         font-family: $code-font-style !important;
         color: $color-secondary-light;
       }
-  
+
       .btn {
         @include button;
-  
+
         &:hover,
         :active,
         :focus {
           background-color: rgba($color-secondary, 0.1);
         }
       }
-  
-     
     }
-
-
-
   }
 
-  .hamburgerMenu:has(.input:checked) + .sidebar{
+  .hamburgerMenu:has(.input:checked) + .sidebar {
     translate: 0;
   }
 
-  @media(min-width:700px){
+  @media (min-width: 700px) {
     display: none;
   }
 }
