--- a/styles/Component/github.module.scss
+++ b/styles/Component/github.module.scss
@@ -17,7 +17,8 @@
 }
 
 .container {
-  
+  position: relative;
+  z-index: -10;
   padding: 0 8%;
   display: flex;
   justify-content: center;
