--- a/styles/Pages/about.module.scss
+++ b/styles/Pages/about.module.scss
@@ -151,7 +151,8 @@
    
     &__photo {
       position: relative;
-      
+      z-index: -10;
+
       width: 30%;
       overflow: visible;
       
