--- a/styles/Pages/hero.module.scss
+++ b/styles/Pages/hero.module.scss
@@ -5,7 +5,8 @@
   padding: 0 8%;
 
 .hero{
- 
+  position: relative;
+  z-index: -10;
   width: 100%;
   padding: 10%;
  
